# infinity-plus-one

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
notebooks/: README.md
report/: IA.md
results/: .gitignore  appendix_c_grid_shift_koch_n1.csv  appendix_c_grid_shift_koch_n2.csv  appendix_c_grid_shift_koch_n3.csv  appendix_c_grid_shift_koch_n4.csv  appendix_c_grid_shift_koch_n5.csv  appendix_c_grid_shift_koch_n6.csv  appendix_c_grid_shift_n1.csv  appendix_c_grid_shift_n2.csv  appendix_c_grid_shift_n3.csv  appendix_c_grid_shift_n4.csv  appendix_c_grid_shift_n5.csv  appendix_c_grid_shift_n6.csv  appendix_c_grid_shift_sierpinski_n1.csv  appendix_c_grid_shift_sierpinski_n2.csv  appendix_c_grid_shift_sierpinski_n3.csv  appendix_c_grid_shift_sierpinski_n4.csv  appendix_c_grid_shift_sierpinski_n5.csv  appendix_c_grid_shift_sierpinski_n6.csv  appendix_c_sampling_n1.csv  appendix_c_sampling_n2.csv  appendix_c_sampling_n3.csv  appendix_c_sampling_n6.csv  appendix_c_sampling_sierpinski_n1.csv  appendix_c_sampling_sierpinski_n2.csv  appendix_c_sampling_sierpinski_n3.csv  appendix_c_sampling_sierpinski_n5.csv  appendix_c_sampling_sierpinski_n6.csv  convergence_model_params.csv  iteration_accuracy.csv  koch_all_counts.csv  koch_all_density_checks.csv  koch_all_local_slopes.csv  koch_all_regressions.csv  koch_all_residuals.csv  koch_n1_appendix.csv  koch_n1_counts.csv  koch_n1_density_check.csv  koch_n1_regressions.csv  koch_n2_appendix.csv  (+52 more)
scripts/: collate_csvs.py  compile_window_comparison.py  plot_config.py  (+8 more)
(+7 files in other folders)
